WP-9059 footer menu spacing issue related code changes

--- a/sass/partials/design/_footer.sass
+++ b/sass/partials/design/_footer.sass
@@ -339,7 +339,7 @@ input.signup-submit
       float: left
       width: 100%
       margin: 0
-      paddin-top: 0px
+      padding-top: 0px
     +breakpoint($bp-tablet-pot)
       display: inline-block
       padding-top: 19px
